--- a/core/assets/css/ds__defaults.css
+++ b/core/assets/css/ds__defaults.css
@@ -580,6 +580,7 @@ main hr::before {
 main img {
     max-width: 100%;
     height: auto;
+    position: relative;
 }
 main figure {
     display: flex;
